fix textarea label not align issue

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -54,3 +54,18 @@
     opacity: 1;
   }
 }
+
+#contact--button:hover {
+  background-color: rgb(26, 38, 67);
+  transform: scale(1.1);
+  transition: all 1s;
+}
+
+.button {
+  transition: all ease 0.8s;
+}
+
+.button:hover {
+  opacity: 0.8;
+  background-color: rgb(0, 0, 0, 0.1);
+}
