--- a/src/styles/Components.css
+++ b/src/styles/Components.css
@@ -63,46 +63,3 @@
   z-index: -1;
   opacity: 0.9;
 }
-
-.dialog {
-  z-index: 9990;
-  position: fixed;
-  inset: 0;
-  min-height: 100vh;
-  min-width: 100vw;
-}
-
-.dialog--overlay {
-  height: 100%;
-  width: 100%;
-  background-color: #161515a5;
-  z-index: 9998;
-}
-
-/* dialog  */
-.dialog--content {
-  z-index: 9999;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: bottom;
-  overflow: scroll;
-  max-height: 80vh;
-  transition: all 1s ease;
-}
-
-#contact--button:hover {
-  background-color: rgb(26, 38, 67);
-  transform: scale(1.1);
-  transition: all 1s;
-}
-
-.button {
-  transition: all ease 0.8s;
-}
-
-.button:hover {
-  opacity: 0.8;
-  background-color: rgb(0, 0, 0, 0.1);
-}
